--- a/VRChat/13/1064613.html
+++ b/VRChat/13/1064613.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "hachigatsu2yuki" data-product-category="33"
-        data-product-id="1064613" data-product-list="market_show"
-        data-product-price="1000" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="hachigatsu2yuki" data-product-category=
+        "33" data-product-id="1064613" data-product-list=
+        "market_show" data-product-price="1000" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -102,14 +103,15 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
                         <div class="u-mb-200">
                           <div class="eventname-flag">
@@ -123,8 +125,7 @@
                             </div></a>
                           </div>
                         </div>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -135,13 +136,13 @@
                             <img alt="八月二雪" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2175821/icon_image/5b6ed24a-a737-4e92-87c6-9731052e34a5_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               八月二雪
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           Valuable Rooms
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -230,17 +231,16 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1064613"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="Valuable Rooms | 八月二雪"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1064613"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="Valuable Rooms | 八月二雪"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1064613"
@@ -250,7 +250,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -269,7 +269,8 @@
                         </div></a>
                       </div>
                       <section>
-                        <div class="player" data-src=
+                        <div class="player u-my-300 u-bg-400"
+                        data-src=
                         "https://s2.booth.pm/4e6ac74b-2d4a-4b5d-bc76-8cc39bf34871/s/1064613/full/6f6c2ef5-4494-40d2-aac2-c0b2730e83bc.mp3">
                           <div class="player_control">
                             <div class="icon-play"></div>
@@ -299,7 +300,7 @@
                       </section>
                       <section>
                         <div class=
-                        "market-item-detail-description">
+                        "js-market-item-detail-description">
                           <table class="tracks">
                             <tr>
                               <td class="track-number">
@@ -351,7 +352,7 @@
                               </td>
                             </tr>
                           </table>
-                          <p class="autolink">
+                          <p class="autolink u-text-wrap">
                             八月二雪 Remix album 1.夜の隣で(Yaca Mix)/YACA
                             IN DA HOUSE 2.水際(Re-Install The
                             Ghost)/obake 3.夢幻(GF Remix)/じーえふ
@@ -362,8 +363,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
