--- a/VRChat/91/1309791.html
+++ b/VRChat/91/1309791.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "tatara-vchi" data-product-category="127" data-product-id=
-        "1309791" data-product-list="market_show"
-        data-product-price="100" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="tatara-vchi" data-product-category=
+        "127" data-product-id="1309791" data-product-list=
+        "market_show" data-product-price="100" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -103,17 +104,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -125,13 +126,13 @@
                             "TATARA-Virtual.Cyber.Heavy.Industry"
                             class="user-avatar at-item-summary"
                             src="https://asset.booth.pm/assets/thumbnail_placeholder_f_150x150-111239104af306673a8ca0b4b0976bf244ba9d43195456673ea7e27c6dcdb36c.png">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               TATARA-Virtual.Cyber.Heavy.Industry
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【無料】コリンズ＆ゾンビグラス　フォーマル系　12本セット
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -272,18 +273,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1309791"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【無料】コリンズ＆ゾンビグラス　フォーマル系　12本セット | TATARA-Virtual.Cyber.Heavy.Industry"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1309791"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【無料】コリンズ＆ゾンビグラス　フォーマル系　12本セット | TATARA-Virtual.Cyber.Heavy.Industry"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1309791"
@@ -293,7 +293,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -370,8 +370,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             コリンズグラス、ゾンビグラス、トールグラス、チムニーグラスとは300～400ml(小さいペットボトルより少し多い程度)が酌め、円筒形で小さな手でも持てるほど細身かつ背の高い大型グラス群です。
                             その定義に似合った創作品の内、コリンズからゾンビのスタンダードもしくはフォーマルなデザインの12本を１つにまとめたセットになります。
                             取りあえずの基本的なカクテルバーを作りたい人向けなセットになります。これならばポピュラーなロングドリンクの容器で困らないでしょう。
@@ -402,8 +402,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
